libs/@local/hashql/ast/tests/ui/lower/expander/special-form-expander/access-field-literal-type-annotation.jsonc
//@ run: fail
//@ description: Field literal with type annotation should error
[
  "::kernel::special_form::access",
  "tuple",
  { "#literal": 0, "#type": "Integer" }
  //~^ ERROR type annotations are not allowed on field index literals
]
